--- a/index.css
+++ b/index.css
@@ -377,6 +377,7 @@ color: #333333;
     font-size: 70px;
     background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     width: fit-content;
     margin: auto;
@@ -420,6 +421,7 @@ transform: translateY(-50%);
     font-size: 60px;
     background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
@@ -453,6 +455,7 @@ transform: translateY(-50%);
 .fourth-section-header-wrapper {
     background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
     font-size: 60px;
@@ -624,9 +627,9 @@ input[type=radio] {
   opacity: 1;
   z-index: 1;
   
-  img {
+  /* img {
     box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
-  }
+  } */
 }
 
 .player {
@@ -813,6 +816,7 @@ input:focus {
 .fifth-section-title {
   background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   text-align: center;
   font-size: 60px;
