--- a/index.css
+++ b/index.css
@@ -1,7 +1,23 @@
-* body {
-    margin: 0;
+@media (min-width: 576px) {
+  html, body {
     background-color: #0E0E21;
-}
+    margin: 0;
+    padding: 0;
+    width: fit-content;
+    height: 100%;
+  }
+  }
+
+
+@media (min-width: 1201px) {
+  html, body {
+    background-color: #0E0E21;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
+  }
 
 * p, h1, h2, h3, h4, h5, h6, a, .logo, .skills-skill {
     font-family: -apple-system, system-ui, BlinkMacSystemFont;
@@ -443,14 +459,42 @@ transform: translateY(-50%);
     padding-top: 240px;
 }
 
-.item-5 {
+@media (min-width: 576px) {
+  .item-5 {
     color: #fff;
     width: 50%;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+  }
+
+
+@media (min-width: 1201px) {
+  .item-5 {
+    color: #fff;
+    width: 50%;
+    text-align: left;
+}
+  }
+
+@media (min-width: 576px) {
+  .item-6 {
+    width: 50%;
+    margin: auto;
+}
 }
 
-.item-6 {
+
+
+@media (min-width: 1201px) {
+  .item-6 {
     width: 50%;
+    margin: 0;
 }
+}
+
+
 
 .fourth-section-header-wrapper {
     background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
@@ -464,9 +508,18 @@ transform: translateY(-50%);
     padding-bottom: 150px;
 }
 
-.fourth-section-side-wrapper {
+@media (min-width: 576px) {
+  .fourth-section-side-wrapper {
+    display: block;
+}
+  }
+
+
+@media (min-width: 1201px) {
+  .fourth-section-side-wrapper {
     display: flex;
 }
+  }
 
 .slider-wrapper {
     max-width: 1000px;
@@ -548,12 +601,7 @@ transform: translateY(-50%);
   box-sizing: border-box;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
+
 
 /* body {
   display: flex;
@@ -584,17 +632,36 @@ input[type=radio] {
   cursor: pointer;
 }
 
-.container2 {
-  width: 100%;
-  max-width: 800px;
-  max-height: 600px;
-  height: 100%;
-  transform-style: preserve-3d;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
+@media (min-width: 576px) {
+  .container2 {
+    width: 100%;
+    max-width: 800px;
+    max-height: 724px;
+    height: 100%;
+    transform-style: preserve-3d;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    height: 400px;
 }
+  }
+  
+  
+  
+  @media (min-width: 1201px) {
+    .container2 {
+      width: 100%;
+      max-width: 800px;
+      max-height: 600px;
+      height: 100%;
+      transform-style: preserve-3d;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 
 .cards {
   position: relative;
