--- a/index.css
+++ b/index.css
@@ -643,7 +643,7 @@ input[type=radio] {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 400px;
+    /* height: 400px; */
 }
   }
   
@@ -663,12 +663,24 @@ input[type=radio] {
     }
   }
 
-.cards {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin-bottom: 20px;
+@media (min-width: 576px) {
+  .cards {
+    position: relative;
+    width: 1500px;
+    height: 500px;
+    margin-bottom: 20px;
+  }
 }
+
+
+  @media (min-width: 1201px) {
+    .cards {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      margin-bottom: 20px;
+    }
+  }
 
 .container2 img {
   width: 100%;
