--- a/index.css
+++ b/index.css
@@ -175,11 +175,37 @@ nav {
   }
 
 @media (min-width: 576px) {
+  .first-section-title {
+    font-size: 70px;
+  }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .first-section-title {
+      font-size: 40px;
+    }
+  }
+
+  @media (min-width: 576px) {
+    .first-section-subtitle {
+      font-size: 55px;
+    }
+    }
+    
+    
+    @media (min-width: 1201px) {
+      .first-section-subtitle {
+        font-size: 30px;
+      }
+    }
+
+@media (min-width: 576px) {
   .mars-wrapper {
     background-image: url(images/pexels-tomas-anunziata-412026\ 2.png);
     background-size: cover;
     position: relative;
-    height: 150vh;
+    height: 160vh;
 }
   }
   
