--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ nav {
     align-items: center;
     margin: auto;
     justify-content: space-between;
+    width: 100%;
 }
 }
 
@@ -99,6 +100,7 @@ nav {
     cursor: pointer;
     text-align: center;
     margin: auto;
+    width: auto;
 }
 }
 
@@ -261,7 +263,7 @@ display: block;
 position: absolute;
 height: 4px;
 width: 100%;
-background: black;
+background: #fff;
 border-radius: 9px;
 opacity: 1;
 left: 0;
