--- a/index.css
+++ b/index.css
@@ -45,8 +45,8 @@
 @media (min-width: 576px) {
 nav {
     /* background-color: #ffffff; */
-    opacity: 90%;
-    width: 90%;
+    /* opacity: 95%; */
+    /* width: 90%; */
     margin: 0 auto;
     display: flex;
     /* justify-content: space-between; */
@@ -89,6 +89,7 @@ nav {
     margin: auto;
     justify-content: space-between;
     width: 100%;
+    padding-top: 50px;
 }
 }
 
@@ -101,6 +102,7 @@ nav {
     text-align: center;
     margin: auto;
     width: auto;
+    padding-top: 20px;
 }
 }
 
@@ -153,7 +155,7 @@ width: 60%;
         font-weight: 550;
         margin: auto;  
         padding: 0%;
-        background-color: lightsteelblue;
+        background-color: #333;
 		position: absolute;
 	    width: 100%;
 	    left: 0;
@@ -164,7 +166,14 @@ width: 60%;
 
 .menu-toggle ul.active {
     display: block;
-    /* ...ostatak stilova menija... */
+    height: 100vh;
+  }
+
+  .menu-toggle ul.active li {
+    font-size: 150px;
+    align-items: center;
+    padding: 0%;
+    margin: 0%;
   }
 
 #home-section {
@@ -196,21 +205,26 @@ width: 60%;
 
 @media (min-width: 576px) {
   .first-section-title {
-    font-size: 100px;
+    font-size: 150px;
     margin-bottom: 150px;
+    width: 100%;
+    padding-top: 200px;
   }
   }
   
   
   @media (min-width: 1201px) {
     .first-section-title {
-      font-size: 40px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    padding-top: 0;
     }
   }
 
   @media (min-width: 576px) {
     .first-section-subtitle {
-      font-size: 75px;
+      font-size: 100px;
+      padding-bottom: 50px;
     }
     }
     
@@ -218,6 +232,7 @@ width: 60%;
     @media (min-width: 1201px) {
       .first-section-subtitle {
         font-size: 30px;
+      padding-bottom: 30px;
       }
     }
 
@@ -271,6 +286,7 @@ width: 60%;
     background: transparent;
     cursor: pointer;
     display: block;
+    z-index: 1;
 }
 
 .burger input {
@@ -324,36 +340,82 @@ top: 28px;
 left: 5px;
 }
 
-button {
-position: relative;
-display: inline-block;
-cursor: pointer;
-outline: none;
-border: 0;
-vertical-align: middle;
-text-decoration: none;
-background: transparent;
-padding: 0;
-font-size: inherit;
-font-family: inherit;
-}
+@media (min-width: 576px) {
+  button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 0;
+    font-size: 50px;
+    font-family: inherit;
+    }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    button {
+      position: relative;
+      display: inline-block;
+      cursor: pointer;
+      outline: none;
+      border: 0;
+      vertical-align: middle;
+      text-decoration: none;
+      background: transparent;
+      padding: 0;
+      font-size: inherit;
+      font-family: inherit;
+      }
+  }
 
-button.learn-more {
-width: 12rem;
-height: auto;
-z-index: 1;
-}
+@media (min-width: 576px) {
+  button.learn-more {
+    width: 32rem;
+    height: auto;
+    z-index: 1;
+    }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    button.learn-more {
+      width: 12rem;
+      height: auto;
+      z-index: 1;
+      }
+  }
 
-button.learn-more .circle {
-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-position: relative;
-display: block;
-margin: 0;
-width: 3rem;
-height: 3rem;
-background: #ffffff;
-border-radius: 1.625rem;
-}
+@media (min-width: 576px) {
+  button.learn-more .circle {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 5rem;
+    height: 5rem;
+    background: #ffffff;
+    border-radius: 3.625rem;
+    }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    button.learn-more .circle {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 3rem;
+      height: 3rem;
+      background: #ffffff;
+      border-radius: 1.625rem;
+      }
+  }
 
 button.learn-more .circle .icon {
 transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
@@ -364,13 +426,26 @@ margin: auto;
 background: #fff;
 }
 
-button.learn-more .circle .icon.arrow {
-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-left: 0.625rem;
-width: 1.125rem;
-height: 0.125rem;
-background: none;
-}
+@media (min-width: 576px) {
+  button.learn-more .circle .icon.arrow {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    left: 0.625rem;
+    width: 2.125rem;
+    height: 0.125rem;
+    background: none;
+    }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    button.learn-more .circle .icon.arrow {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      left: 0.625rem;
+      width: 1.125rem;
+      height: 0.125rem;
+      background: none;
+      }
+  }
 
 button.learn-more .circle .icon.arrow::before {
 position: absolute;
@@ -384,21 +459,42 @@ border-right: 0.125rem solid #333333;
 transform: rotate(45deg);
 }
 
-button.learn-more .button-text {
-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
-padding: 0.75rem 0;
-margin: 0 0 0 1.85rem;
-color: #ffffff;
-font-weight: 700;
-line-height: 1.6;
-text-align: center;
-text-transform: uppercase;
-}
+@media (min-width: 576px) {
+  button.learn-more .button-text {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.50rem 0;
+    margin: 0 0 0 1.85rem;
+    color: #ffffff;
+    font-weight: 700;
+    line-height: 1.5;
+    text-align: center;
+    text-transform: uppercase;
+    }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    button.learn-more .button-text {
+      transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      padding: 0.75rem 0;
+      margin: 0 0 0 1.85rem;
+      color: #ffffff;
+      font-weight: 700;
+      line-height: 1.6;
+      text-align: center;
+      text-transform: uppercase;
+      }
+  }
 
 button:hover .circle {
 width: 100%;
@@ -425,31 +521,108 @@ color: #333333;
     display: flex;
 }
 
-.column-5 {
+@media (min-width: 576px) {
+  .column-5 {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    width: 1000px;
+    /* justify-content: space-between; */
+    gap: 17%;
+    width: 100%;
     margin: auto;
     color: #0E0E21;
     background-color: #D9D9D9;
     border-radius: 20px;
     padding: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    height: 300px;
+    
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .column-5 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 1000px;
+      margin: auto;
+      color: #0E0E21;
+      background-color: #D9D9D9;
+      border-radius: 20px;
+      padding: 10px;
+      margin-bottom: 20px;
+      height: 80px;
+  }
+  }
 
-.second-section p {
+@media (min-width: 576px) {
+  .second-section-icon {
+    width: 200px;
+  }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .second-section-icon {
+      width: 80px;
+    }
+  }
+
+@media (min-width: 576px) {
+  .second-section p {
     width: 120px;
     text-align: left;
+    font-size: 60px;
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .second-section p {
+      width: 120px;
+      text-align: left;
+    font-size: 20px;
+  }
+  }
 
-.second-section-item-2 {
+@media (min-width: 576px) {
+  .second-section-item-2 {
     width: 100px;
     text-align: center;
+    font-size: 60px;
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .second-section-item-2 {
+      width: 100px;
+      text-align: center;
+    font-size: 20px;
+  }
+  }
 
-.second-section-header {
-    font-size: 70px;
+  @media (min-width: 576px) {
+    .second-section-item-3 {
+      width: 100px;
+      text-align: center;
+      font-size: 60px;
+  }
+    }
+    
+    
+    @media (min-width: 1201px) {
+      .second-section-item-3 {
+        width: 100px;
+        text-align: center;
+      font-size: 20px;
+    }
+    }
+
+@media (min-width: 576px) {
+  .second-section-header {
+    font-size: 200px;
     background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
     -webkit-background-clip: text;
     background-clip: text;
@@ -459,6 +632,23 @@ color: #333333;
     padding: 20px;
     padding-bottom: 80px;
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .second-section-header {
+      font-size: 70px;
+      background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      width: fit-content;
+      margin: auto;
+      padding: 20px;
+      padding-bottom: 80px;
+  }
+  }
+
 
 /* .third-section-img-wrapper {
     position: relative;
@@ -485,20 +675,59 @@ padding-top: 300px;
 order: 1;
 }
 
-.third-section-real-wrapper {
-position: absolute;
-left: 20%;
-top: 40%;
-transform: translateY(-50%);
-}
+@media (min-width: 576px) {
+  .third-section-real-wrapper {
+    position: absolute;
+    left: 5%;
+    top: 40%;
+    transform: translateY(-50%);
+    }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .third-section-real-wrapper {
+      position: absolute;
+      left: 20%;
+      top: 40%;
+      transform: translateY(-50%);
+      }
+  }
 
-.third-section-title {
-    font-size: 60px;
+  @media (min-width: 576px) {
+    .third-section-h3 {
+      font-size: 50px;
+      }
+    }
+    
+    
+    @media (min-width: 1201px) {
+      .third-section-h3 {
+        font-size: 30px;
+        }
+    }
+
+
+@media (min-width: 576px) {
+  .third-section-title {
+    font-size: 150px;
     background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .third-section-title {
+      font-size: 60px;
+      background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+  }
+  }
 
 .column-6 {
     display: flex;
@@ -507,10 +736,20 @@ transform: translateY(-50%);
     font-size: 25px;
 }
 
-.third-section-check-img {
-    height: 100%;
+@media (min-width: 576px) {
+  .third-section-check-img {
+    height: 100px;
     margin-right: 20px;
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+    .third-section-check-img {
+      height: 100%;
+      margin-right: 20px;
+  }
+  }
 
 .fourth-section {
     width: 1600px;
