--- a/index.css
+++ b/index.css
@@ -515,7 +515,7 @@ color: #333333;
     color: #fff;
     width: 1400px;
     margin: auto;
-    padding-top: 300px;
+    padding-top: 600px;
 }
   }
   
@@ -1190,6 +1190,34 @@ input[type=radio] {
   color: #8b8ba7;
 }
 /* styling of whole input container */
+
+
+@media (min-width: 576px) {
+.form {
+  --timing: 0.3s;
+  --width-of-input: 200px;
+  --height-of-input: 40px;
+  --border-height: 2px;
+  --input-bg: #fff;
+  --border-color: #2f2ee9;
+  --border-radius: 30px;
+  --after-border-radius: 1px;
+  position: relative;
+  width: 60%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  padding-inline: 0.8em;
+  border-radius: var(--border-radius);
+  transition: border-radius 0.5s ease;
+  background: var(--input-bg,#fff);
+  margin: auto;
+  margin-bottom: 50px;
+}
+  }
+
+
+@media (min-width: 1201px) {
 .form {
   --timing: 0.3s;
   --width-of-input: 200px;
@@ -1210,7 +1238,24 @@ input[type=radio] {
   background: var(--input-bg,#fff);
   margin: auto;
 }
+  }
 /* styling of Input */
+
+@media (min-width: 576px) {
+.input {
+  font-size: 3.9rem;
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  padding-inline: 0.5em;
+  padding-block: 0.7em;
+  border: none;
+  text-align: center;
+}
+  }
+
+
+@media (min-width: 1201px) {
 .input {
   font-size: 0.9rem;
   background-color: transparent;
@@ -1221,6 +1266,7 @@ input[type=radio] {
   border: none;
   text-align: center;
 }
+  }
 /* styling of animated border */
 .form:before {
   content: "";
@@ -1261,16 +1307,47 @@ input:focus {
   padding-top: 480px;
 }
 
+@media (min-width: 576px) {
 .fifth-section-btn {
   color: #fff;
   background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
-  width: 200px;
+  width: 40%;
+  height: 80px;
+  font-size: 50px;
+  border-radius: 20px;
+  margin-top: 50px;
+}
+  }
+
+
+@media (min-width: 1201px) {
+.fifth-section-btn {
+  color: #fff;
+  background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
+  width: 400px;
   height: 40px;
   font-size: 20px;
   border-radius: 20px;
   margin-top: 50px;
 }
+  }
 
+@media (min-width: 576px) {
+.fifth-section-title {
+  background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  font-size: 120px;
+  width: fit-content;
+  margin: auto;
+  padding-bottom: 50px;
+}
+  }
+
+
+@media (min-width: 1201px) {
 .fifth-section-title {
   background: linear-gradient(to right, #BF1700, #FF4A21, #CE631C, #FF6600);
   -webkit-background-clip: text;
@@ -1281,32 +1358,82 @@ input:focus {
   width: fit-content;
   margin: auto;
 }
+  }
 
+@media (min-width: 576px) {
+.fifth-section-subtitle-title {
+  color: #fff;
+  font-size: 60px;
+  font-weight: 400;
+  padding-bottom: 50px;
+}
+  }
+
+
+@media (min-width: 1201px) {
 .fifth-section-subtitle-title {
   color: #fff;
   font-size: 25px;
   font-weight: 400;
 }
+  }
 
+@media (min-width: 576px) {
+.footer-navigation {
+  display: block;
+  list-style-type: none;
+  gap: 10px; /* Razmak između elemenata */
+  padding: 0%;
+  margin: 0%;
+  padding-bottom: 50px;
+}
+  }
+  
+  
+  @media (min-width: 1201px) {
 .footer-navigation {
   display: flex;
   list-style-type: none;
   gap: 10px; /* Razmak između elemenata */
   padding: 0%;
   margin: 0%;
+  padding-bottom: 0;
 }
+  }
 
+@media (min-width: 576px) {
 .item-10 a {
   text-decoration: none;
   color: #fff;
-  font-size: 20px;
+  font-size: 60px;
 }
+  }
+  
+  
+  @media (min-width: 1201px) {
+.item-10 a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 30px;
+}
+  }
 
+@media (min-width: 576px) {
+.footer-navigation a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 80px;
+}
+  }
+  
+  
+  @media (min-width: 1201px) {
 .footer-navigation a {
   text-decoration: none;
   color: #fff;
   font-size: 30px;
 }
+  }
 
 .sixth-section {
   justify-content: center;
@@ -1314,6 +1441,18 @@ input:focus {
   padding-top: 500px;
 }
 
+@media (min-width: 576px) {
+.six-section-wrapper {
+  display: block;
+  align-items: center;
+  width: 50%;
+  justify-content: space-between;
+  margin: auto;
+}
+  }
+  
+  
+  @media (min-width: 1201px) {
 .six-section-wrapper {
   display: flex;
   align-items: center;
@@ -1321,17 +1460,64 @@ input:focus {
   justify-content: space-between;
   margin: auto;
 }
+  }
 
+  @media (min-width: 576px) {
+.item-8 img {
+ width: 100%;
+ padding-bottom: 50px;
+}
+  }
+  
+  
+  @media (min-width: 1201px) {
+.item-8 img {
+  width: 100%;
+ padding-bottom: 0;
+}
+  }
+
+  @media (min-width: 576px) {
+.seventh-section {
+  padding-top: 100px;
+  text-align: center;
+}
+  }
+  
+  
+  @media (min-width: 1201px) {
 .seventh-section {
   padding-top: 100px;
 }
+  }
 
+/* .seventh-section-wrapper {
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+} */
+
+  @media (min-width: 576px) {
+.seventh-section-wrapper {
+  color: #fff;
+  display: block;
+  justify-content: space-between;
+  padding: 20px;
+  font-size: 40px;
+}
+  }
+  
+  
+  @media (min-width: 1201px) {
 .seventh-section-wrapper {
   color: #fff;
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  font-size: 15px;
 }
+  }
 
 .positive {
   color: green;
