--- a/index.css
+++ b/index.css
@@ -152,7 +152,8 @@ width: 60%;
   width: 100%;
   left: 0;
   right: 0;
-  top: 119px;
+  top: 0px;
+  padding-top: 100px;
 }
 }
 
@@ -162,10 +163,11 @@ width: 60%;
 }
 
 .menu-toggle ul.active li {
-  font-size: 150px;
+  font-size: 200px;
   align-items: center;
   padding: 0%;
   margin: 0%;
+  padding-bottom: 40px;
 }
 
 #home-section {
@@ -277,6 +279,7 @@ width: 60%;
   cursor: pointer;
   display: block;
   z-index: 1;
+  margin-right: 60px;
 }
 
 .burger input {
@@ -1406,7 +1409,7 @@ input:focus {
 .six-section-wrapper {
   display: flex;
   align-items: center;
-  width: 50%;
+  width: 60%;
   justify-content: space-between;
   margin: auto;
 }
@@ -1469,3 +1472,17 @@ input:focus {
 .negative {
   color: red;
 }
+
+@media (min-width: 576px) {
+  .footer-navigation, li, a {
+  margin-bottom: 40px;
+  }
+}
+
+
+@media (min-width: 1201px) {
+  .footer-navigation, li, a {
+    margin-bottom: 0;
+  }
+}
+
